Bug 510082. Silverlight depends on NPN_InvalidateRect working even when the plugin is in windowed mode (although it should really just call Win32 APIs to invalidate its window), so make NPN_InvalidateRect work for windowed plugins. r=josh