modules/plugin/test/testplugin/nptest_macosx.mm
@@ -209,6 +209,7 @@ pluginDraw(InstanceData* instanceData)
 
     // restore the cgcontext gstate
     CGContextRestoreGState(cgContext);
+    break;
   }
   case DM_SOLID_COLOR: {
     // save the cgcontext gstate
@@ -231,6 +232,8 @@ pluginDraw(InstanceData* instanceData)
     break;
   }
   }
+
+  ++instanceData->paintCount;
 }
 
 int16_t
